<resources>

    <string name="app_name">Video Collector</string>
    <string name="client">Video Collector</string>
    <string name="menu_settings">Settings</string>
    <string name="widget_text">Video Collector</string>
    <string name="mobile_client">Video Collector - Main Menu</string>
    <string name="scan_activity">Enter New Video Info or Scan!</string>
    <string name="browse_activity">Video Collector - Browse</string>
    <string name="view_activity">Video Collector - View</string>
	
	
	<!-- For Scan Activity -->
	<string name="scan_barcode">Scan a Barcode</string>
	<string name="UPC">UPC</string>
	<string name="title">Title</string>
	<string name="director">Director</string>
	<string name="rated">Rated</string>
	<string name="runtime">Runtime</string>
	<string name="minutes">minutes</string>
	<string name="year">Year</string>
	<string-array name="rated">
		<item >G</item>
		<item >PG</item>
		<item >PG13</item>
		<item >R</item>
		<item >NC17</item>
		<item >UNRATED</item>
	</string-array>
	<string name="add_video">Add to Collection</string>
	<string name="browse_button">Browse</string>
	<string name="sync">Sync</string>
	<string name="add">Add</string>
	<string name="menu_title">Video Collector Mobile</string>
	<string name="lookup_by_title">Lookup By Title</string>
	<string name="lookup_by_upc">Lookup By UPC</string>
	
	
</resources>